adj of size issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -195,11 +195,11 @@ body {
 /* 桌面端 Header */
 .site-header {
     width: 100%;
-    padding: 1rem 5%;
+    padding: 0.8rem 5%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     border-bottom: 1px solid var(--color-border);
@@ -408,7 +408,7 @@ footer {
     position: relative;
     background-color: var(--color-primary-accent);
     overflow: hidden;
-    padding: 1.5rem 5%; /* 增加上、下空间，与上方内容保持距离 */
+    padding: 1rem 5%; /* 增加上、下空间，与上方内容保持距离 */
     
     background-image: url("images/foot_pattern.svg"); /* 使用 Footer 区域专属的墙纸 */
     background-repeat: repeat;
@@ -453,7 +453,7 @@ footer > * {
 }
 
 .footer-logo-image {
-    height: 60px; /* Control logo size */
+    height: 75px; /* Control logo size */
     width: auto;
     display: block;
     opacity: 0.7; /* Subtly fade the logo for a softer look */
@@ -1070,6 +1070,11 @@ main section:nth-child(even) {
 
 /* 当屏幕宽度小于或等于 480px 时 (典型的手机竖屏宽度) */
 @media (max-width: 480px) {
+    .clock-wrapper {
+        width: 160px;
+        height: 160px;
+    }
+    
     .time-chart {
         /* 将图表尺寸从 200px 缩小到 160px */
         width: 160px;
